# zns-chatbot

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.unoptimized  README.md  massage.template.yaml  pyproject.toml  setup.py
.github/workflows/: build.yml  dispatch.yml
config/: config.prod.yaml  config.template.yaml
i18n/en/: bot.ftl
i18n/ru/: bot.ftl
static/: about.md  fit_frame.css  fit_frame.mjs  line-up.csv  massage_timetable.css  massage_timetable.mjs  massage_workload.css  massage_workload.mjs  mealty.mjs  mealty.user.js  menu.css  menu.csv  menu.json  menu.mjs  menu_2025_1.json  menu_belarus.json  orders.css  orders.mjs  rag_data.yaml  scraper.js
static/icons/: icons.sfd
static/x/: mealty.js
templates/: fit_frame.html  massage_timetable.html  massage_workload.html  menu.html  orders.html
tests/: test_main.py  test_passes_assignment_framework.py
zns-chatbot/: accounts.csv  aioflielock.py  assistant.py  cached_localization.py  config.py  events.py  food.py  main.py  massage.py  photo_task.py  server.py  storage.py  telegram.py  telegram_bot.py  telegram_links.py  tg_constants.py  tg_state.py
zns-chatbot/plugins/: __init__.py  _fix_torch.py  assistant.py  auth.py  avatar.py  base_plugin.py  food.py  massage.py  orders.py  pass_keys.py  passes.py  superuser.py  user_echo.py
zns_chatbot/: config.py  main.py
